# kyutai_modal

./: .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  README.md  deploy_kyutai_on_modal.md  first_steps.md  pyproject.toml
.github/workflows/: ci.yml
samples/: manifest.jsonl
samples/wav24k/: chunk_0.wav.txt  chunk_2.wav.txt  chunk_3.wav.txt  chunk_4.wav.txt  latency_example_01.wav.txt  latency_example_01.wav.words.json  latency_example_02.wav.txt  latency_example_02.wav.words.json  latency_example_03.wav.txt  latency_example_03.wav.words.json  latency_example_04.wav.txt  latency_example_04.wav.words.json  latency_example_05.wav.txt  latency_example_05.wav.words.json  latency_example_manifest.json
scripts/: annotate_samples.py  debug_rust_server.py  extract_latency_samples.py  latency_test.py  prepare_samples.py  test_color_diff.py  transcribe_cli.py  ws_stress.py
src/stt/: __init__.py  audio.py  batching.py  constants.py  modal_app.py  modal_app_rust.py  server.py
src/stt/engine/: __init__.py  fake.py  kyutai.py  protocol.py
tests/: __init__.py
tests/integration/: __init__.py  test_idle_timeout.py
tests/integration_gpu/: __init__.py  test_engine.py
tests/unit/: __init__.py  test_audio.py  test_batching.py  test_server.py
