[project]
name = "kyutai-stt-modal"
version = "0.1.0"
description = "Production-ready speech-to-text service using kyutai/stt-1b-en_fr on Modal"
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.0",
    "torchaudio>=2.4.0",
    "transformers>=4.53.0",
    "accelerate>=0.33.0",
    "huggingface-hub[hf_transfer]>=0.25.0",
    "fastapi>=0.115.0",
    "websockets>=13.0",
    "uvicorn>=0.30.0",
    "numpy<2",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "modal>=0.64.0",
]
samples = [
    "faster-whisper>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stt"]
