[project]
name = "kyutai-stt-modal"
version = "0.1.0"
description = "Real-time streaming speech-to-text on Modal with ~0.5s latency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["speech-to-text", "stt", "transcription", "streaming", "modal", "kyutai", "moshi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "moshi==0.2.9",
    "sphn",
    "torch==2.4.0",
    "numpy<2",
    "huggingface-hub[hf_transfer]>=0.25.0",
    "fastapi>=0.115.0",
    "websockets>=13.0",
    "uvicorn>=0.30.0",
    "rich",
    "sounddevice",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "modal>=0.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests that require deployed Modal service",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/stt"]
